--- a/stykes.css
+++ b/stykes.css
@@ -6,6 +6,29 @@ body {
   h1 {
     font-size: 36px;
   }
+  nav {
+    background-color: #333;
+    padding: 10px;
+  }
+  nav ul {
+    display: flex;
+    justify-content: space-around;
+  }
+  nav ul li {
+    display: inline;
+    margin-right: 20px;
+  }
+  nav ul li:last-child {
+    margin-right: 0;
+  }
+  nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+  }
+  nav ul li a:hover {
+    color: #ccc;
+  }
   p {
     font-size: 18px;
   }
