--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
   }
 body {
@@ -22,7 +22,7 @@ body {
   
   .navbar h1 {
     color: #fff;
-    margin-right: 20px;
+    margin: 0;
   }
   
   .navbar ul {
@@ -63,3 +63,71 @@ body {
   a:hover {
     color: #2980b9;
   }
+
+  /* General section styles */
+.section {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+/* Style individual sections */
+.skills, .experience, .projects {
+  flex-basis: calc(33.33% - 20px);
+  background-color: #f1f1f1;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.contact {
+  flex-basis: calc(33.33% - 20px);
+  /* background-color: #f1f1f1; */
+  padding: 20px;
+  border-radius: 5px;
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
+}
+
+.skills h2, .experience h2, .contact h2 {
+  margin-bottom: 10px;
+}
+.banner img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: contain;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+.name-image-container {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+}
+.profile-image {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.intro {
+  padding: 20px;
+  font-size: 1.8em;
+  line-height: 1.8;
+  text-align: justify;
+  max-width: 1000px;
+  margin: 0 auto;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.intro p{
+  font-size: 24px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  font-size: 0.9em;
+}
