--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,8 @@ body {
 }
 .banner img {
   width: 100%;
-  max-height: 400px;
-  object-fit: contain;
+  max-height: 300px;
+  object-fit: none;
   margin-top: 1%;
   margin-bottom: 2%;
 }
