--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,10 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    margin: 50px;
+  }
+
+  .body{
+    margin: 0px 30px;
   }
   h1 {
     font-size: 36px;
@@ -17,7 +20,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #333;
-    padding: 10px 20px;
+    padding: 5px 20px;
   }
   
   .navbar h1 {
@@ -91,13 +94,27 @@ body {
 .skills h2, .experience h2, .contact h2 {
   margin-bottom: 10px;
 }
+
+.banner {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 10px;
+}
+
 .banner img {
-  width: 100%;
-  max-height: 300px;
-  object-fit: none;
+  width: calc(50% - 10px);
+  max-height: 400px;
+  object-fit: fill;
   margin-top: 1%;
   margin-bottom: 2%;
 }
+/* .banner img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: scale-down;
+  margin-top: 1%;
+  margin-bottom: 2%;
+} */
 .name-image-container {
   display: flex;
   align-items: center;
