--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,13 @@ body {
   font-family: 'Times New Roman', Times, serif;
 }
 
+.download-resume {
+  text-align: center;
+  padding: 20px;
+  font-size: 1.8em;
+  line-height: 1.8;
+}
+
 footer {
   background-color: #333;
   color: #fff;
