--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body {
     object-fit: fill;
     margin-top: 1%;
     margin-bottom: 2%;
+    margin-right: 1%;
   }
   /* .banner img {
     width: 100%;
@@ -225,8 +226,12 @@ footer {
   }
 
   .banner img {
-    width: 40%;
+    width: 35%;
     max-height: 650px;
+    object-fit: fill;
+    margin-top: 1%;
+    margin-bottom: 2%;
+    margin-right: 2%;
   }
 
   .intro {
